--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -121,11 +121,13 @@
         </div>
       </div>
 
-      <!-- C) Actions row (duplicated here for visual parity; still disabled) -->
+      <!-- C) Actions row -->
       <div class="actions flex gap-2">
-        <button id="btnAddSingle_bottom" class="btn btn-primary btn-sm opacity-60 cursor-not-allowed" disabled title="Enabled in Phase 2">Add Single Item</button>
-        <button id="btnAddBulk_bottom" class="btn btn-ghost btn-sm opacity-60 cursor-not-allowed" disabled title="Enabled in Phase 2">Add to Bulk List</button>
+        <button id="btnAddSingle_bottom" class="btn btn-primary btn-sm opacity-60 cursor-not-allowed" disabled>Add Single Item</button>
+        <button id="btnAddBulk_bottom" class="btn btn-ghost btn-sm opacity-60 cursor-not-allowed" disabled>Add to Bulk List</button>
+        <button id="intake-draft" class="btn btn-ghost btn-sm opacity-60 cursor-not-allowed" disabled>Save as Draft</button>
       </div>
+      
       <div class="actions" style="margin-top:8px">
           <button class="btn btn-ghost btn-sm" id="copyTitleBtn" disabled title="Enabled in Phase 2">Copy Title</button>
           <button class="btn btn-ghost btn-sm" id="copySkuBtn" disabled title="Enabled in Phase 2">Copy SKU</button>
