--- a/screens/settings-landing.html
+++ b/screens/settings-landing.html
@@ -1,21 +1,20 @@
 <!-- Settings Landing (Chooser) -->
-<!-- Based on screens/_template/screen-template.html structure -->
 <section class="screen" data-screen="settings-landing">
   <header class="screen-header">
     <h1>Settings</h1>
     <p class="subtitle">Choose what you want to manage</p>
   </header>
 
-  <!-- Global banner area (success/error/info) -->
+  <!-- Global banner -->
   <div id="settings-landing-banner" class="banner" hidden></div>
 
-  <!-- Access denied panel (defense-in-depth; should rarely show here) -->
+  <!-- Access denied (defense-in-depth) -->
   <div id="settings-landing-denied" class="card error" hidden>
     <h2>Access denied</h2>
     <p>You do not have permission to view Settings.</p>
   </div>
 
-  <!-- Loading state -->
+  <!-- Loading -->
   <div id="settings-landing-loading" class="loading" hidden>Loading…</div>
 
   <!-- Content -->
