--- a/screens/settings-marketplaces.html
+++ b/screens/settings-marketplaces.html
@@ -1,21 +1,20 @@
 <!-- Settings › Marketplaces (Placeholder) -->
-<!-- Cloned structure from screens/_template/screen-template.html -->
 <section class="screen" data-screen="settings-marketplaces">
   <header class="screen-header">
     <h1>Marketplace Settings</h1>
     <p class="subtitle">Connect marketplaces and configure listing defaults (coming soon)</p>
   </header>
 
-  <!-- Global banner area -->
+  <!-- Global banner -->
   <div id="settings-marketplaces-banner" class="banner" hidden></div>
 
-  <!-- Access denied panel -->
+  <!-- Access denied -->
   <div id="settings-marketplaces-denied" class="card error" hidden>
     <h2>Access denied</h2>
     <p>You must be an Owner or Admin to view Marketplace Settings.</p>
   </div>
 
-  <!-- Loading state -->
+  <!-- Loading -->
   <div id="settings-marketplaces-loading" class="loading" hidden>Loading…</div>
 
   <!-- Content -->
