--- a/screens/settings-landing.html
+++ b/screens/settings-landing.html
@@ -24,7 +24,7 @@
         <h3>User Settings</h3>
         <p>Manage users, roles, and activation.</p>
         <div class="actions">
-          <button class="btn primary">Open</button>
+          <button class="btn btn--primary">Open</button>
         </div>
       </div>
 
