--- a/screens/settings-landing.html
+++ b/screens/settings-landing.html
@@ -1,4 +1,4 @@
-<!-- Settings Landing html  -->
+<!-- Settings Landing (Chooser) -->
 <section class="screen" data-screen="settings-landing">
   <header class="screen-header">
     <h1>Settings</h1>
