--- a/screens/settings-landing.html
+++ b/screens/settings-landing.html
@@ -1,3 +1,5 @@
+//Begin HTML
+
 <!-- Settings Landing (Chooser) -->
 <section class="screen" data-screen="settings-landing">
   <header class="screen-header">
@@ -37,4 +39,6 @@
       </div>
     </div>
   </div>
+
+  //End html
 </section>
