--- a/screens/settings-landing.html
+++ b/screens/settings-landing.html
@@ -1,4 +1,4 @@
-//Begin HTML
+<!-- Begin settings-landing.html -->
 
 <!-- Settings Landing (Chooser) -->
 <section class="screen" data-screen="settings-landing">
@@ -43,4 +43,4 @@
  
 </section>
 
- //End html
+<!-- end settings-landing.html -->
