--- a/screens/settings-marketplaces.html
+++ b/screens/settings-marketplaces.html
@@ -1,3 +1,5 @@
+<!-- Begin settings-marketplaces.html -->
+
 <!-- Settings › Marketplaces (Placeholder) -->
 <section class="screen" data-screen="settings-marketplaces">
   <header class="screen-header">
@@ -31,3 +33,4 @@
     </div>
   </div>
 </section>
+<!-- end settings-marketplaces.html -->
