--- a/screens/settings-marketplaces.html
+++ b/screens/settings-marketplaces.html
@@ -21,11 +21,13 @@
 
   <!-- Content -->
   <div id="settings-marketplaces-content" class="content" hidden>
+    <div id="mp-list" class="grid grid-3" style="gap:14px"></div>
+
     <div class="card">
-      <h3>Coming soon</h3>
+      <h3>Notes</h3>
       <p>
-        This page is wired and can be bookmarked now. We’ll add account connections, profiles,
-        and defaults in the next phase.
+        Connections here are a prototype. We record your selection in
+        <code>app.marketplace_connections</code> but full OAuth/API flows will be added later.
       </p>
       <div class="actions">
         <a class="btn" href="?page=settings">Back to Settings</a>
