--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -180,13 +180,16 @@
             <thead>
               <tr class="border-b">
                 <th class="text-left px-3 py-2">Saved</th>
-                <th class="text-left px-3 py-2">Title</th>
+                <th class="text-left px-3 py-2">Item Name / Description</th>
                 <th class="text-left px-3 py-2">Price</th>
+                <th class="text-left px-3 py-2">Qty</th>
+                <th class="text-left px-3 py-2">Category</th>
+                <th class="text-left px-3 py-2">Actions</th>
               </tr>
             </thead>
             <tbody id="recentDraftsTbody">
               <tr>
-                <td class="px-3 py-2 text-gray-500" colspan="3">No drafts yet (Phase 2).</td>
+                <td class="px-3 py-2 text-gray-500" colspan="6">No drafts yet.</td>
               </tr>
             </tbody>
           </table>
