--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -13,6 +13,40 @@
   <!-- Main form card (mirrors legacy sectioning) -->
   <section class="card rounded-2xl shadow p-4 mb-4">
     <form id="intakeForm" autocomplete="off">
+      <!-- NEW ▸ Photos (above Basic Item Details) -->
+      <div id="photosCard" class="card mb-4">
+        <h2 class="sectionTitle flex items-center justify-between">
+          Photos
+          <span class="text-sm text-gray-600" id="photosCount">0 / 15</span>
+        </h2>
+  
+        <!-- Actions -->
+        <div class="flex flex-wrap gap-2 mb-3">
+          <label class="btn btn-primary btn-sm cursor-pointer">
+            Take Photo
+            <input id="photoCameraInput" type="file" accept="image/*" capture="environment" class="hidden" />
+          </label>
+          <label class="btn btn-ghost btn-sm cursor-pointer">
+            Upload Photo
+            <input id="photoFileInput" type="file" accept="image/*" multiple class="hidden" />
+          </label>
+          <button id="photoReorderToggle" type="button" class="btn btn-ghost btn-sm" title="Toggle drag-to-reorder">
+            Reorder
+          </button>
+        </div>
+  
+        <!-- Grid -->
+        <div id="photosGrid" class="grid gap-2"
+             style="grid-template-columns:repeat(auto-fill,minmax(110px,1fr));">
+          <!-- thumbnails injected here -->
+        </div>
+  
+        <p class="text-sm text-gray-600 mt-2">
+          Tips: you can add up to 15 photos. Tap a photo to <em>Crop</em>, <em>Replace</em>, <em>Delete</em>, or <em>Set Primary</em>.
+        </p>
+      </div>
+
+      
       <!-- A) Basic Item Details -->
       <div class="card">
         <h2 class="sectionTitle">Basic Item Details</h2>
@@ -199,4 +233,30 @@
   </section>
 </div>
 
+<!-- Crop Modal -->
+<dialog id="cropDialog" class="rounded-2xl p-0">
+  <form method="dialog" class="p-3 w-[90vw] max-w-xl">
+    <h3 class="sectionTitle mb-2">Crop Photo</h3>
+
+    <!-- Canvas cropper -->
+    <div class="border rounded-2xl overflow-hidden mb-2">
+      <canvas id="cropCanvas" width="600" height="600" style="display:block;max-width:100%;height:auto"></canvas>
+    </div>
+
+    <!-- Controls -->
+    <div class="flex items-center justify-between gap-3 mb-3">
+      <label class="text-sm">Zoom
+        <input id="cropZoom" type="range" min="1" max="3" step="0.01" value="1" />
+      </label>
+      <div class="text-sm">Drag to reposition</div>
+    </div>
+
+    <div class="flex gap-2 justify-end">
+      <button id="cropCancelBtn" type="button" class="btn btn-ghost btn-sm">Cancel</button>
+      <button id="cropSaveBtn"   type="button" class="btn btn-primary btn-sm">Save Crop</button>
+    </div>
+  </form>
+</dialog>
+
 <!-- end intake.html -->
+
