--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -40,7 +40,7 @@
   
         <!-- Grid -->
         <div id="photosGrid" class="grid gap-2 place-items-start"
-             style="grid-template-columns:repeat(auto-fill,140px);">
+           style="grid-template-columns:repeat(auto-fill,140px);grid-auto-rows:140px;">
           <!-- thumbnails injected here -->
         </div>
   
