--- a/screens/settings-marketplaces.html
+++ b/screens/settings-marketplaces.html
@@ -26,7 +26,7 @@
       <div class="card">
         <h3>Notes</h3>
         <p>
-          Ebay connected - all other Connections here are a prototype. We record your selection in
+          Ebay is connected - all other Connections here are a prototype. We record your selection in
           <code>app.marketplace_connections</code> but full OAuth/API flows will be added later.
         </p>
         <div class="actions">
