--- a/screens/settings-marketplaces.html
+++ b/screens/settings-marketplaces.html
@@ -13,7 +13,7 @@
   <!-- Access denied -->
   <div id="settings-marketplaces-denied" class="card error" hidden>
     <h2>Access denied</h2>
-    <p>You must be an Owner or Admin to view Marketplace Settings.</p>
+    <p>You must be an Owner or Admin to view the Marketplace Settings.</p>
   </div>
 
   <!-- Loading -->
