Update subtitle text for marketplace settings

--- a/screens/settings-marketplaces.html
+++ b/screens/settings-marketplaces.html
@@ -4,7 +4,7 @@
 <section class="screen" data-screen="settings-marketplaces">
   <header class="screen-header">
     <h1>Marketplace Settings</h1>
-    <p class="subtitle">Connect marketplaces and configure listing defaults (coming soon)</p>
+    <p class="subtitle">Connect marketplaces and configure listing defaults (in progress)</p>
   </header>
 
   <!-- Global banner -->
