--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -175,6 +175,8 @@
           <div id="marketplaceTilesError" class="text-sm text-red-600 mt-1 hidden">
             Select at least one marketplace.
           </div>
+          <!-- Cards container: marketplace-specific placeholder cards mount here -->
+          <div id="marketplaceCards" class="mt-3 flex flex-col gap-3" aria-live="polite"></div>
         </div>
       </div>  <!-- end of Marketplace Listing Details card -->
       
