Add data-menu attribute to navigation element

--- a/app.html
+++ b/app.html
@@ -182,7 +182,7 @@
     <button class="burger" onclick="logout()" title="Sign out" aria-label="Sign out">⎋</button>
   </header>
   <div class="wrap">
-    <nav id="nav" aria-label="Primary">
+    <nav id="nav" aria-label="Primary" data-menu>
       <h3>Workspace</h3>
       <a href="?page=dashboard" data-page="dashboard">Dashboard</a>
       <a href="?page=pos"       data-page="pos">POS</a>
