--- a/screens/settings-marketplaces.html
+++ b/screens/settings-marketplaces.html
@@ -21,7 +21,7 @@
 
     <!-- Content -->
     <div id="settings-marketplaces-content" class="content" hidden>
-      <div id="mp-list" class="grid grid-3" style="gap:14px"></div>
+      <div id="mp-list" class="mp-list"></div>
   
       <div class="card">
         <h3>Notes</h3>
