--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -280,6 +280,7 @@
           aria-labelledby="tabInventory"
           class="hidden"
           aria-hidden="true"
+          hidden
         >
           <div id="recentInventoryHeader" data-recent-inventory-header class="flex items-center justify-between mb-2">
             <h3 class="sectionTitle m-0">Active Inventory</h3>
@@ -309,6 +310,7 @@
           aria-labelledby="tabBulk"
           class="hidden"
           aria-hidden="true"
+          hidden
         >
           <div class="text-gray-500 text-sm">Bulk Entry is coming soon.</div>
         </section>
