--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -250,23 +250,22 @@
           <div id="recentDraftsHeader" data-recent-drafts-header class="flex items-center justify-between mb-2">
             <h3 class="sectionTitle m-0">Recent Drafts</h3>
           </div>
-
-          <table class="w-full text-sm">
+        
+          <table class="table text-sm">
             <thead>
               <tr>
-                <th class="px-3 py-2 text-left">Saved</th>
-                <th class="px-3 py-2 text-left">SKU</th>
-                <th class="px-3 py-2 text-left">Item</th>
-                <th class="px-3 py-2 text-left">Price</th>
-                <th class="px-3 py-2 text-left">Qty</th>
-                <th class="px-3 py-2 text-left">Store</th>
-                <th class="px-3 py-2 text-left">Channel</th>
-                <th class="px-3 py-2 text-left">Actions</th>
+                <th>Saved</th>
+                <th>Title</th>
+                <th>Price</th>
+                <th>Quantity</th>
+                <th>Category</th>
+                <th>Actions</th>
               </tr>
             </thead>
             <tbody id="recentDraftsTbody"></tbody>
           </table>
         </section>
+
 
         <!-- Inventory pane (hidden by default; lazy-loaded) -->
         <section
@@ -280,18 +279,18 @@
           <div id="recentInventoryHeader" data-recent-inventory-header class="flex items-center justify-between mb-2">
             <h3 class="sectionTitle m-0">Active Inventory</h3>
           </div>
-
-          <table class="w-full text-sm">
+        
+          <table class="table text-sm">
             <thead>
               <tr>
-                <th class="px-3 py-2 text-left">Added</th>
-                <th class="px-3 py-2 text-left">SKU</th>
-                <th class="px-3 py-2 text-left">Item</th>
-                <th class="px-3 py-2 text-left">Price</th>
-                <th class="px-3 py-2 text-left">Qty</th>
-                <th class="px-3 py-2 text-left">Store</th>
-                <th class="px-3 py-2 text-left">Channel</th>
-                <th class="px-3 py-2 text-left">Actions</th>
+                <th>Saved</th>
+                <th>Image</th>
+                <th>SKU</th>
+                <th>Title</th>
+                <th>Price</th>
+                <th>QTY</th>
+                <th>Category</th>
+                <th>Actions</th>
               </tr>
             </thead>
             <tbody id="recentInventoryTbody"></tbody>
