--- a/screens/pos.html
+++ b/screens/pos.html
@@ -41,8 +41,8 @@
           </div>
         </div>
 
-        <!-- Cart items (per-line discounts like legacy) -->
-        <div id="pos-cart" class="space-y-2 my-2">
+       <!-- Cart items (per-line discounts like legacy) -->
+        <div id="pos-cart" class="grid grid-cols-1 md:grid-cols-2 gap-2 my-2">
           <!-- rows injected -->
         </div>
 
