--- a/screens/pos.html
+++ b/screens/pos.html
@@ -41,52 +41,49 @@
           </div>
         </div>
 
-        <!-- Explicit ticket grid (no Tailwind breakpoint dependency) -->
-        <div class="pos-ticket-grid">
-          <!-- LEFT: Cart -->
-          <div class="pos-ticket-cart">
-            <div id="pos-cart" class="grid grid-cols-1 gap-2">
-              <!-- rows injected -->
+                <!-- Full-width Ticket column: Cart → Totals → Payment row -->
+        <div>
+          <!-- CART (full width) -->
+          <div id="pos-cart" class="grid grid-cols-1 gap-2">
+            <!-- rows injected -->
+          </div>
+
+          <!-- TOTALS (full width, compact right-aligned numbers) -->
+          <div class="mt-3 pos-totals">
+            <div class="flex justify-between py-1">
+              <span class="text-muted">Subtotal</span>
+              <span id="pos-subtotal">$0.00</span>
+            </div>
+            <div class="flex justify-between py-1">
+              <span class="text-muted">Discounts</span>
+              <span id="pos-discounts">$0.00</span>
+            </div>
+            <div class="flex justify-between py-1">
+              <span class="text-muted">Tax</span>
+              <span id="pos-tax">$0.00</span>
+            </div>
+            <div class="flex justify-between py-2 border-t mt-2 font-semibold">
+              <span>Total</span>
+              <span id="pos-total">$0.00</span>
             </div>
           </div>
 
-          <!-- RIGHT: Totals + Payment -->
-          <div class="pos-ticket-aside">
-            <div class="pos-ticket-summary">
-              <div class="flex justify-between py-1">
-                <span class="text-muted">Subtotal</span>
-                <span id="pos-subtotal">$0.00</span>
-              </div>
-              <div class="flex justify-between py-1">
-                <span class="text-muted">Discounts</span>
-                <span id="pos-discounts">$0.00</span>
-              </div>
-              <div class="flex justify-between py-1">
-                <span class="text-muted">Tax</span>
-                <span id="pos-tax">$0.00</span>
-              </div>
-              <div class="flex justify-between py-2 border-t mt-2 font-semibold">
-                <span>Total</span>
-                <span id="pos-total">$0.00</span>
-              </div>
-            </div>
+          <!-- PAYMENT ROW (single horizontal row; wraps nicely on small screens) -->
+          <div class="mt-2 pos-pay-row">
+            <select id="pos-payment" class="select pos-pay-item">
+              <option value="" selected disabled>Select payment…</option>
+              <option value="card">Card (Valor)</option>
+              <option value="cash">Cash</option>
+            </select>
 
-            <div class="pos-ticket-actions">
-              <select id="pos-payment" class="select">
-                <option value="" selected disabled>Select payment…</option>
-                <option value="card">Card (Valor)</option>
-                <option value="cash">Cash</option>
-              </select>
+            <button id="pos-split" class="btn btn-ghost pos-pay-item">Split payment</button>
 
-              <div class="pos-ticket-row">
-                <button id="pos-split" class="btn btn-ghost">Split payment</button>
-                <input id="pos-customer" class="input" placeholder="Customer (optional)" />
-              </div>
+            <input id="pos-customer" class="input pos-pay-grow" placeholder="Customer (optional)" />
 
-              <button id="pos-complete" class="btn btn-primary">Complete Sale</button>
-            </div>
+            <button id="pos-complete" class="btn btn-primary pos-pay-item">Complete Sale</button>
           </div>
         </div>
+
 
         <!-- Optional: debug/save logs toggle (kept full width under the grid) -->
         <details class="mt-3">
