--- a/screens/pos.html
+++ b/screens/pos.html
@@ -70,11 +70,10 @@
 
           <!-- PAYMENT ROW (single horizontal row; wraps nicely on small screens) -->
           <div class="mt-2 pos-pay-row">
-            <select id="pos-payment" class="select pos-pay-item">
-              <option value="" selected disabled>Select payment…</option>
-              <option value="card">Card (Valor)</option>
-              <option value="cash">Cash</option>
-            </select>
+            <select id="pos-payment" class="select pos-pay-item">…</select>
+            <button id="pos-split" class="btn btn-ghost pos-pay-item">Split payment</button>
+            <button id="pos-complete" class="btn btn-primary pos-pay-item">Complete Sale</button>
+          </div>
             
             <button id="pos-split" class="btn btn-ghost pos-pay-item">Split payment</button>
             <button id="pos-complete" class="btn btn-primary pos-pay-item">Complete Sale</button>
