--- a/screens/pos.html
+++ b/screens/pos.html
@@ -68,10 +68,10 @@
             </div>
           </div>
 
-          <!-- PAYMENT ROW (single horizontal row; wraps nicely on small screens) -->
           <div class="mt-2 pos-pay-row">
             <select id="pos-payment" class="select pos-pay-item">…</select>
             <button id="pos-split" class="btn btn-ghost pos-pay-item">Split payment</button>
+            <input id="pos-customer" class="input pos-pay-grow" placeholder="Customer (optional)" />
             <button id="pos-complete" class="btn btn-primary pos-pay-item">Complete Sale</button>
           </div>
             
