--- a/screens/pos.html
+++ b/screens/pos.html
@@ -83,7 +83,7 @@
             </select>
 
             <button id="pos-split" class="btn btn-ghost pos-pay-item">Split payment</button>
-            <button id="pos-complete" class="btn btn-primary pos-pay-item">Complete Sale</button>
+            <button id="pos-complete" class="btn btn-primary pos-pay-item pos-pay-push">Complete Sale</button>
           </div>
 
             
