--- a/screens/pos.html
+++ b/screens/pos.html
@@ -13,13 +13,16 @@
   <div id="screen-content" class="hidden">
     <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
 
-      <!-- LEFT: Search / Results -->
-      <div class="card p-3">
-        <div class="flex items-center gap-2 mb-2">
-          <input id="pos-search" class="input w-full" placeholder="+ Misc — or — type to search" />
-          <button id="pos-search-btn" class="btn btn-primary">Search</button>
-          <button id="pos-search-clear" class="btn btn-ghost">Clear</button>
-        </div>
+    <!-- LEFT: Search / Results -->
+    <div class="card p-3">
+      <div class="flex items-center justify-between mb-2">
+        <div class="font-semibold">Inventory Search</div>
+      </div>
+      <div class="flex items-center gap-2 mb-2">
+        <input id="pos-search" class="input w-full" placeholder="+ Misc — or — type to search" />
+        <button id="pos-search-btn" class="btn btn-primary">Search</button>
+        <button id="pos-search-clear" class="btn btn-ghost">Clear</button>
+      </div>
 
         <div id="pos-quick-row" class="flex items-center gap-2 mb-3">
           <button id="pos-quick-misc" class="btn btn-sm">+ Misc</button>
