--- a/screens/pos.html
+++ b/screens/pos.html
@@ -52,7 +52,7 @@
           </div>
 
           <!-- TOTALS (full width, compact right-aligned numbers) -->
-          <div class="mt-3 pos-totals">
+          <div class="mt-3 pos-totals ml-auto text-right w-[320px] max-w-full">
             <div class="flex justify-between py-1">
               <span class="text-muted">Subtotal</span>
               <span id="pos-subtotal">$0.00</span>
