--- a/screens/pos.html
+++ b/screens/pos.html
@@ -52,25 +52,27 @@
           </div>
 
           <!-- TOTALS (full width, compact right-aligned numbers) -->
-          <div class="mt-3 pos-totals ml-auto text-right w-[320px] max-w-full">
-            <div class="flex justify-between py-1">
-              <span class="text-muted">Subtotal</span>
-              <span id="pos-subtotal">$0.00</span>
-            </div>
-            <div class="flex justify-between py-1">
-              <span class="text-muted">Discounts</span>
-              <span id="pos-discounts">$0.00</span>
-            </div>
-            <div class="flex justify-between py-1">
-              <span class="text-muted">Tax</span>
-              <span id="pos-tax">$0.00</span>
-            </div>
-            <div class="flex justify-between py-2 border-t mt-2 font-semibold">
-              <span>Total</span>
-              <span id="pos-total">$0.00</span>
+          <div class="mt-3 flex justify-end">
+            <div class="pos-totals text-right w-[320px] max-w-full">    
+              <div class="flex justify-between py-1">
+                <span class="text-muted">Subtotal</span>
+                <span id="pos-subtotal">$0.00</span>
+              </div>
+              <div class="flex justify-between py-1">
+                <span class="text-muted">Discounts</span>
+                <span id="pos-discounts">$0.00</span>
+              </div>
+              <div class="flex justify-between py-1">
+                <span class="text-muted">Tax</span>
+                <span id="pos-tax">$0.00</span>
+              </div>
+              <div class="flex justify-between py-2 border-t mt-2 font-semibold">
+                <span>Total</span>
+                <span id="pos-total">$0.00</span>
+              </div>
             </div>
           </div>
-
+          
           <!-- PAYMENT ROW (single horizontal row; wraps nicely on small screens) -->
           <div class="mt-2 pos-pay-row">
             <select id="pos-payment" class="select pos-pay-item">
