--- a/screens/pos.html
+++ b/screens/pos.html
@@ -51,24 +51,26 @@
             <!-- rows injected -->
           </div>
 
-          <!-- TOTALS (full width, compact right-aligned numbers) -->
-          <div class="mt-3 flex justify-end">
-            <div class="pos-totals text-right w-[320px] max-w-full">    
-              <div class="flex justify-between py-1">
-                <span class="text-muted">Subtotal</span>
-                <span id="pos-subtotal">$0.00</span>
-              </div>
-              <div class="flex justify-between py-1">
-                <span class="text-muted">Discounts</span>
-                <span id="pos-discounts">$0.00</span>
-              </div>
-              <div class="flex justify-between py-1">
-                <span class="text-muted">Tax</span>
-                <span id="pos-tax">$0.00</span>
-              </div>
-              <div class="flex justify-between py-2 border-t mt-2 font-semibold">
-                <span>Total</span>
-                <span id="pos-total">$0.00</span>
+          <!-- TOTALS (share exact padding with item rows) -->
+          <div class="mt-3 ticket-row ticket-row--totals">
+            <div class="flex justify-end">
+              <div class="pos-totals text-right w-[320px] max-w-full">    
+                <div class="flex justify-between py-1">
+                  <span class="text-muted">Subtotal</span>
+                  <span id="pos-subtotal">$0.00</span>
+                </div>
+                <div class="flex justify-between py-1">
+                  <span class="text-muted">Discounts</span>
+                  <span id="pos-discounts">$0.00</span>
+                </div>
+                <div class="flex justify-between py-1">
+                  <span class="text-muted">Tax</span>
+                  <span id="pos-tax">$0.00</span>
+                </div>
+                <div class="flex justify-between py-2 border-t mt-2 font-semibold">
+                  <span>Total</span>
+                  <span id="pos-total">$0.00</span>
+                </div>
               </div>
             </div>
           </div>
