--- a/screens/pos.html
+++ b/screens/pos.html
@@ -53,24 +53,34 @@
 
           <!-- TOTALS (share exact padding with item rows) -->
           <div class="mt-3 ticket-row ticket-row--totals">
-            <div class="flex justify-end">
-              <div class="pos-totals text-right w-[320px] max-w-full">    
-                <div class="flex justify-between py-1">
-                  <span class="text-muted">Subtotal</span>
-                  <span id="pos-subtotal">$0.00</span>
+            <!-- Match the item-row control bar layout -->
+            <div class="ticket-controls flex items-center justify-between gap-2 flex-wrap">
+              <!-- Left cluster (QTY spacer) — intentionally empty to keep columns consistent -->
+              <div class="inline-flex items-center gap-1"></div>
+          
+              <!-- Right cluster (amount + action column) -->
+              <div class="flex items-center gap-2 flex-1 justify-end flex-wrap">
+                <div class="pos-totals text-right w-[320px] max-w-full">
+                  <div class="flex justify-between py-1">
+                    <span class="text-muted">Subtotal</span>
+                    <span id="pos-subtotal">$0.00</span>
+                  </div>
+                  <div class="flex justify-between py-1">
+                    <span class="text-muted">Discounts</span>
+                    <span id="pos-discounts">$0.00</span>
+                  </div>
+                  <div class="flex justify-between py-1">
+                    <span class="text-muted">Tax</span>
+                    <span id="pos-tax">$0.00</span>
+                  </div>
+                  <div class="flex justify-between py-2 border-t mt-2 font-semibold">
+                    <span>Total</span>
+                    <span id="pos-total">$0.00</span>
+                  </div>
                 </div>
-                <div class="flex justify-between py-1">
-                  <span class="text-muted">Discounts</span>
-                  <span id="pos-discounts">$0.00</span>
-                </div>
-                <div class="flex justify-between py-1">
-                  <span class="text-muted">Tax</span>
-                  <span id="pos-tax">$0.00</span>
-                </div>
-                <div class="flex justify-between py-2 border-t mt-2 font-semibold">
-                  <span>Total</span>
-                  <span id="pos-total">$0.00</span>
-                </div>
+                <!-- Invisible placeholder = same width/shape as the real Remove button.
+                     Keeps the outer edge identical to item rows. -->
+                <button class="btn btn-ghost btn-xs btn-placeholder" aria-hidden="true" tabindex="-1">Remove</button>
               </div>
             </div>
           </div>
