--- a/screens/pos.html
+++ b/screens/pos.html
@@ -105,6 +105,7 @@
   
             <!-- CASH PANEL (inline; hidden until CASH selected) -->
             <div id="pos-cash-panel" class="card pos-panel pos-compact hidden">
+              <div class="pos-section-title">Cash Payment</div>
               <div class="flex items-center gap-3 flex-wrap">
                 <div class="pos-field">
                   <label>Total Due</label>
@@ -125,6 +126,7 @@
   
             <!-- SPLIT PANEL (inline; hidden until Split clicked) -->
             <div id="pos-split-panel" class="card pos-panel pos-compact hidden">
+              <div class="pos-section-title">Split Payment</div>
               <div class="flex items-center gap-2 flex-wrap mb-2">
                 <select id="pos-split-method" class="select pos-w-method">
                   <option value="cash">CASH</option>
