--- a/screens/pos.html
+++ b/screens/pos.html
@@ -109,18 +109,18 @@
               <div class="flex items-center gap-3 flex-wrap">
                 <div class="pos-field">
                   <label>Total Due</label>
-                  <div id="pos-cash-total-txt" class="pos-static">$0.00</div>
+                  <div id="pos-cash-total-txt" class="pos-static w-[120px] text-right">$0.00</div>
                 </div>
                 <div class="pos-field">
                   <label>Amount Received</label>
-                  <input id="pos-cash-received" type="number" class="input pos-w-amount" inputmode="decimal" placeholder="0.00" />
+                  input id="pos-cash-received" type="number" class="input input-sm w-[120px]" inputmode="decimal" placeholder="0.00" />
                 </div>
                 <div class="pos-field">
                   <label>Change Due</label>
-                  <div id="pos-cash-change-txt" class="pos-static">$0.00</div>
+                  <div id="pos-cash-change-txt" class="pos-static w-[120px] text-right">$0.00</div>
                 </div>
-                <button id="pos-cash-confirm" class="btn btn-primary ml-auto">Confirm Cash</button>
-                <button id="pos-cash-close" class="btn btn-ghost">Close</button>
+                <button id="pos-cash-confirm" class="btn btn-primary btn-sm ml-auto">Confirm Cash</button>
+                <button id="pos-cash-close" class="btn btn-ghost btn-sm">Close</button>  
               </div>
             </div>
   
@@ -128,7 +128,7 @@
             <div id="pos-split-panel" class="card pos-panel pos-compact" style="display:none">
               <div class="font-semibold text-lg">Split Payment</div>
               <div class="flex items-center gap-2 flex-wrap mb-2">
-                <select id="pos-split-method" class="select pos-w-method">
+                <select id="pos-split-method" class="select input-sm w-[220px]">
                   <option value="cash">CASH</option>
                   <option value="card:visa">Visa (Valor)</option>
                   <option value="card:mastercard">MasterCard (Valor)</option>
@@ -138,9 +138,8 @@
                   <option value="wallet:zelle">Zelle</option>
                   <option value="wallet:cashapp">Cash App</option>
                 </select>
-                <input id="pos-split-amount" type="number" class="input pos-w-amount" inputmode="decimal" placeholder="Amount" />
-                <button id="pos-split-add" class="btn btn-ghost">Add Payment</button>
-                <button id="pos-split-close" class="btn btn-ghost ml-auto">Close</button>
+                <input id="pos-split-amount" type="number" class="input input-sm w-[120px]" inputmode="decimal" placeholder="Amount" />
+                <button id="pos-split-add" class="btn btn-ghost btn-sm">Add Payment</button>
               </div>
   
               <div class="overflow-auto">
@@ -159,7 +158,8 @@
               <div class="flex items-center gap-2 mt-2">
                 <div class="muted">Remaining:</div>
                 <div id="pos-split-remaining" class="font-semibold">$0.00</div>
-                <button id="pos-split-confirm" class="btn btn-primary ml-auto" disabled>Confirm Split</button>
+                <button id="pos-split-confirm" class="btn btn-primary btn-sm ml-auto" disabled>Confirm Split</button>
+                <button id="pos-split-close" class="btn btn-ghost btn-sm">Close</button>
               </div>
             </div>
 
