--- a/screens/pos.html
+++ b/screens/pos.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="pos-field">
                   <label>Amount Received</label>
-                  input id="pos-cash-received" type="number" class="input input-sm w-[120px]" inputmode="decimal" placeholder="0.00" />
+                  <input id="pos-cash-received" type="number" class="input input-sm w-[120px]" inputmode="decimal" placeholder="0.00" />
                 </div>
                 <div class="pos-field">
                   <label>Change Due</label>
