--- a/screens/pos.html
+++ b/screens/pos.html
@@ -109,18 +109,18 @@
               <div class="flex items-center gap-3 flex-wrap">
                 <div class="pos-field">
                   <label>Total Due</label>
-                  <div id="pos-cash-total-txt" class="pos-static w-[120px] text-right">$0.00</div>
+                  <div id="pos-cash-total-txt" class="pos-static pos-w-amount text-right">$0.00</div>
                 </div>
                 <div class="pos-field">
                   <label>Amount Received</label>
-                  <input id="pos-cash-received" type="number" class="input input-sm w-[120px]" inputmode="decimal" placeholder="0.00" />
+                  <input id="pos-cash-received" type="number" class="input input-sm pos-w-amount" inputmode="decimal" placeholder="0.00" />
                 </div>
                 <div class="pos-field">
                   <label>Change Due</label>
-                  <div id="pos-cash-change-txt" class="pos-static w-[120px] text-right">$0.00</div>
+                  <div id="pos-cash-change-txt" class="pos-static pos-w-amount text-right">$0.00</div>
                 </div>
-                <button id="pos-cash-confirm" class="btn btn-primary btn-sm ml-auto">Confirm Cash</button>
-                <button id="pos-cash-close" class="btn btn-ghost btn-sm">Close</button>  
+                <button id="pos-cash-confirm" class="btn btn-primary btn-sm pos-push">Confirm Cash</button>
+                <button id="pos-cash-close" class="btn btn-ghost btn-sm">Close</button> 
               </div>
             </div>
   
